update for doker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_2f4aaa07ca06421?reconnect=true
-spring.datasource.username = b437975f0ee033
-spring.datasource.password = 00bbac45
+spring.datasource.url = jdbc:mysql://34.175.234.125:3306/my_database
+spring.datasource.username = jna
+spring.datasource.password = jna
 
 
 #spring.datasource.url = jdbc:mysql://185.211.7.52:3306/u359206694_dbportfolio
