--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url = jdbc:mysql://34.175.234.125:3306/my_database
-spring.datasource.username = jna
-spring.datasource.password = jna
-server.forward-headers-strategy=FRAMEWORK
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://bgdq0coz4gtdzci9eynv-mysql.services.clever-cloud.com:3306/bkvkpnk437b2tdsrylko?useSSL=false&serverTimezone=UTC
+spring.datasource.username = uq75uknsmwr0i3st
+spring.datasource.password = sW6ZRKENd9vTbY65c9hd
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.url = jdbc:mysql://185.211.7.52:3306/u359206694_dbportfolio
 #spring.datasource.username = u359206694_dbportfolio
 #spring.datasource.password = Dbporfolio1.
@@ -18,18 +18,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=DEBUG	
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.type=TRACE  
 
-spring.profiles.active = dev
-spring.mail.host: smtp.gmail.com
-spring.mail.port: 587
-spring.mail.username: gen.code.login@gmail.com
-spring.mail.password: wtqjmiooicuizhlf
-spring.mail.protocol: smtp
-spring.mail.tls: true
-spring.mail.properties.mail.smtp.auth: true
-spring.mail.properties.mail.smtp.starttls.enable: true
-spring.mail.properties.mail.smtp.ssl.trust: smtp.gmail.com  
-   
 jwt.secret = secret
 jwt.expiration = 259200
